# hexpat-lsp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  latest_commit.md  package.json  pnpm-lock.yaml
client/: package.json
client/src/: extension.ts
docs/: namespace.drawio
examples/: index.rs
hexparser/: Cargo.toml
hexparser/src/: combinators.rs  lib.rs  m_lexer.rs  m_parser.rs  recovery_err.rs  simple_debug.rs  test_debug.rs  tests.rs  token.rs
hexparser/src/m_parser/: bitfield.rs  enum_.rs  factor.rs  func.rs  function.rs  namespace.rs  operations.rs  struct_.rs
hexparser/src/m_parser/code_block/: bitfield.rs  function_statement.rs  member.rs  mod.rs
hexparser/tests/: test1.rs
hexpat-language-server/: Cargo.toml
hexpat-language-server/src/: completion.rs  imhex_connection.rs  jump_definition.rs  lib.rs  main.rs  namespace_handling.rs  reference.rs  semantic_token.rs
hexpat-language-server/src/imhex_connection/: mod.rs  pattern_editor.rs
parserlib/: Cargo.toml
parserlib/src/: lib.rs
src/: chumsky.rs  completion.rs  jump_definition.rs  main.rs  reference.rs  semantic_token.rs
src/chumsky/: lexer.rs  m_lexer.rs  m_parser.rs  parser.rs
src/chumsky/m_parser/: bitfield.rs  enum_.rs  func.rs  namespace.rs  struct_.rs
src/chumsky/parser/: enum_.rs  func.rs  namespace.rs  struct_.rs
tests/: test1.rs
tower-lsp-boilerplate/: README.md
