[package]
name = "hexparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom-supreme = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
tower-lsp = { version = "0.17.0"}
shellexpand = "2.1.2"
expand_str = "0.1.1"

[dependencies.parserlib]
path = "../parserlib"

[dependencies.nom-locate]
git = "https://github.com/Calcoph/nom_locate"

[debug]
incremental = true
