[package]
name = "hexpat-language-server"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.27.0", features = ["full"] }
tower-lsp = { version = "0.19.0"}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
json = "0.12.4"
url = "2.3.1"
urlencoding = "2.1.2"

[dependencies.hexparser]
path = "../hexparser"

[dependencies.parserlib]
path = "../parserlib"

[debug]
incremental = true
